# SINGRAYBOT

./: README.md
gui/: config  gui.desktop  gui.py  setup.sh  start.sh
hms_robot/bunker_ws/scripts/: bunker_sdk.sh  can.sh
hms_robot/control_ws/install/: .rosinstall  local_setup.sh  setup.sh
hms_robot/control_ws/src/bunker_control/: CMakeLists.txt  package.xml
hms_robot/control_ws/src/bunker_control/src/: demo01.cpp  demo02.cpp  demo03.cpp  demo05.cpp  pid_json.cpp  pid_params.json  read_json_points_node.cpp  target.json.0904  target.json.bak  target1.json  test.json
hms_robot/fast_lp/src/FAST_LIO_LC-master/FAST-LIO/: CMakeLists.txt  package.xml
hms_robot/fast_lp/src/FAST_LIO_LC-master/PGO/: CMakeLists.txt
hms_robot/fast_lp/src/data/: optimized_poses.txt  times.txt
hms_robot/localization_init/src/FAST_LIO/: CMakeLists.txt  package.xml
hms_robot/localization_init/src/FAST_LIO/config/: avia.yaml  mid360.yaml
hms_robot/localization_init/src/FAST_LIO/launch/: localization_avia.launch  localization_mid360.launch  mapping_avia.launch
hms_robot/localization_init/src/FAST_LIO/pose_data/: poses.txt
hms_robot/localization_init/src/color_points/: CMakeLists.txt  package.xml
hms_robot/localization_init/src/color_points/src/: colorpoints.cpp  filter.cpp
hms_robot/localization_init/src/my_custom_msgs/: CMakeLists.txt  package.xml
hms_robot/localization_init/src/my_custom_msgs/msg/: CustomMessage.h  CustomMessage.msg
hms_robot/scripts/: cmd.txt  config  one-touch_start.py  rc.local  readme.txt  start.desktop  start.sh
(+11 files in other folders)
