<?xml version="1.0"?>
<package>
  <name>my_custom_msgs</name>
  <version>1.0.0</version>
  <description>The my_custom_msgs package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <!-- 如果您的包依赖其他软件包，请在以下部分添加合适的依赖 -->
  <!-- <depend>package_name</depend> -->

  <export>

  </export>
</package>